# poetry-bug-with-cross-path-deps

./: README.md  pyproject.toml
