[tool.poetry]
name = "poetry-bug-with-cross-path-deps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
package1 = {path = "deps/package1"}
package2 = {path = "deps/package2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
